# thud

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  build.rs  flake.nix  go.mod  go.sum  main.go  thumbnail_image.patch
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: thud.thumbnailer
completions/: _thud  thud.bash  thud.fish
docs/: file-browsers.md
examples/: config.toml  invalid.toml
man/: thud.1
src/: cli.rs  lib.rs  main.rs  strategy.rs
tests/: config.rs  envify.rs  filter.rs  release.rs
