[package]
name = "thud"
description = "Generate directory thumbnails from images inside them."
version = "0.2.0"
authors = ["Copyright (C) 2022-2023 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/thud"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
image = "0.24.7"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"

[build-dependencies]
clap = { version = "4.4.0", features = ["derive"] }
clap_complete = "4.3.2"
clap_mangen = "0.2.12"

[dev-dependencies]
assert_cmd = "2.0.12"
rustympkglib = "0.1.1"
