[package]
name = "thud"
description = "Generate directory thumbnails for GTK-based file browsers from images inside them."
version = "0.3.1"
authors = ["Copyright (C) 2022-2023 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/thud"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
image = "0.24.7"
serde = { version = "1.0.190", features = ["derive"] }
toml = "0.8.5"

[build-dependencies]
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"
clap_mangen = "0.2.15"

[dev-dependencies]
assert_cmd = "2.0.12"
rustympkglib = "0.1.1"
