[package]
name = "thud"
description = "Generate directory thumbnails for GTK-based file browsers from images inside them."
version = "0.3.1"
authors = ["Copyright (C) 2022-2023 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/thud"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
image = "0.25.5"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"

[build-dependencies]
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"
clap_mangen = "0.2.26"

[dev-dependencies]
assert_cmd = "2.0.16"
rustympkglib = "0.1.1"
